src/test/deca/context/valid/decaObjet/fields/06fieldsDuplicate.deca
// Description:
//    Test d'inheritance avec un champ qui repète chaque classe
//
// Resultats:
//    05fieldsDuplicate.expected
//
// Historique:
//    cree le 15/06/2022

class A {
    int x = 1;
}

class B extends A {
    float x = 2;
}

class C extends B {
    int x = 3;
}
{
    A a = new A();
    B b = new B();
    C c = new C();
    A b2 = new B();
    B c2 = new C();

    println("a.x = ", a.x);
    println("b.x = ", b.x);
    println("c.x = ", c.x);
    println("b2.x = ", b2.x);
    println("c2.x = ", c2.x);
}