src/test/deca/context/invalid/decaObjet/method/18wrongArgsNb.deca
// Description:
// Test d'un appel de méthode avec trop d'argument
//
// Resultats:
//     18wrongArgsNb.deca:16:4:
//
// Historique:
//    crée le 16/06/2022

class A {
    void m() {}
}

{
    A a = new A();
    a.m(1);
}